# BLADE

./: .gitignore  CMakeLists.txt  CMakePresets.json  CODE-OPTIMIZATION-SUMMARY.txt  README.md  blade.manifest  resources.qrc  styles-widgets.qss  styles.qss  test_blade.ps1
docs/: AUTH-CONFIG.md  BUILD-FIX.md  BUILD.md  BUILD_INFO.md  CONNECTION-LOGGING-FIX.md  CRASH_FIX_SUMMARY.md  DEBUG-AUTH.md  FIX-ICONS-CRASH-CONSOLE.md  GUI-COMPLETE.md  GUI-IMPLEMENTATION.md  GUI-QUICKSTART.md  GUI-README.md  GUI-VISUAL-GUIDE.md  HTTP-SIMPLE-GUIDE.md  HTTP-SIMPLIFICATION.md  HTTPS-ADMIN-SETUP.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION-SUMMARY.md  INSTALL-GUI.md  IP-FIX-README.md  LOCAL-PC-FIX.md  LOGGING-SYSTEM.md  MIGRATION-COMPLETE.md  NETWORK-ACCESS-FIX.md  PERFORMANCE-FIX.md  PORT-FIX.md  QT_SETUP.md  QUICK-REFERENCE.md  QUICKSTART-AUTH.md
include/: Application.h  AuthenticationManager.h  ConnectionHandler.h  HTTPServer.h  Logger.h  LoginWidget.h  MainWindow.h  NetworkUtils.h  QRCodeGen.h  Server.h  ServerWidget.h  TitleBar.h  Toast.h
qml/: IconImage.qml  LoginView.qml  MaterialButton.qml  ServerView.qml  main.qml
src/: Application.cpp  AuthenticationManager.cpp  ConnectionHandler.cpp  HTTPServer.cpp  Logger.cpp  LoginWidget.cpp  MainWindow.cpp  NetworkUtils.cpp  QRCodeGen.cpp  Server.cpp  ServerWidget.cpp  main.cpp
web/: index.html  script.js  style.css
